css fixes to handle text wrap inside comment box

--- a/src/components/CardModal/ActivityComponent.module.css
+++ b/src/components/CardModal/ActivityComponent.module.css
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
 }
 
 .previousActivityMainContentHeader {
@@ -84,29 +85,22 @@
   padding: 0rem 0.2rem;
 }
 
-.activityItemCommentBoxWrapper {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  margin-left: 0.5rem;
-  background-color: white;
-  border-radius: 3px;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.068);
-}
-.activityItemCommentBoxWrapper:hover {
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.185);
-}
-
 .commentBoxTextarea {
   border: none;
   background-color: white;
   padding: 0.4rem 0.5rem;
   border-radius: 3px;
+  margin-left: 0.5rem;
   width: 100%;
   font-family: inherit;
   font-size: 0.75rem;
   color: rgb(68, 68, 68);
   overflow-y: hidden;
+  overflow-wrap: break-word;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.068);
+}
+.commentBoxTextarea:hover {
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.185);
 }
 .commentBoxTextarea:focus {
   outline: none;
